--- a/src/app/spotbie/profile-header/albums/view-media/view-media.component.css
+++ b/src/app/spotbie/profile-header/albums/view-media/view-media.component.css
@@ -41,6 +41,7 @@
 .spotbie-album-media-video{
     margin-top: 70px;
     max-width: 100%;
+    max-height: 720px;
 }
 .spotbie-album-media-image-wrapper{
     position: absolute;
