--- a/src/app/streamer/streamer.component.html
+++ b/src/app/streamer/streamer.component.html
@@ -66,7 +66,7 @@
             You've reached the end.
         </div>
 
-        <div class='spotbie-no-posts' *ngIf="pre_loading">
+        <div class='spotbie-no-posts' *ngIf="loading_bottom_stream_text">
             Loading...
         </div>        
 
